fit_predictor/tsp_gls/evaluates/total/round3-eoh_desc/run3/2024-12-29_23-14-14/problem_iter2_response1.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 6
    local_optimal_distances = np.triu(np.dot(np.ones((len(local_optimal_route), len(local_optimal_route))), 
                                     ^
SyntaxError: '(' was never closed

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 6
    local_optimal_distances = np.triu(np.dot(np.ones((len(local_optimal_route), len(local_optimal_route))), 
                                     ^
SyntaxError: '(' was never closed
